refactored to allow async call to the WCF service

--- a/AdradarAdDataWeb/Views/AdData/ErrorPage.cshtml
+++ b/AdradarAdDataWeb/Views/AdData/ErrorPage.cshtml
@@ -7,3 +7,10 @@
 <h2>ErrorPage</h2>
 
 <header class="error">There was error executing the request.</header>
+
+<h3>@Model.Message</h3>
+<section>@Model.StackTrace</section>
+
+
+@section scripts{
+}
